# corsika_reader

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  LICENSE.Auger  README  README.md  cpp_api.html  cpp_example.html  genindex.html  index.html  installation.html  intro.html  objects.inv  python_api.html  python_example.html  search.html  searchindex.js  setup.py
_sources/: cpp_api.txt  cpp_example.txt  installation.txt  intro.txt  python_api.txt  python_example.txt
docs/: Doxyfile  conf.py  cpp_api.rst  high_level.rst  index.rst  intro.rst  low_level.rst  python_api.rst
include/corsika/: Block.h  Constants.h  CorsikaBlock.h  CorsikaLongFile.h  CorsikaLongProfile.h  CorsikaParticle.h  CorsikaShower.h  CorsikaShowerFile.h  CorsikaShowerFileParticleIterator.h  FileIndex.h  FileStream.h  GaisserHillasParameter.h  IOException.h  Index.h  Logging.h  LongFile.h  LongProfile.h  Particle.h  RawCorsikaFile.h  RawParticleIterator.h  RawParticleStream.h  RawStream.h  Shower.h  ShowerFile.h  ShowerParticleList.h  ShowerParticleStream.h  Units.h
include/corsika/particle/: NucleusProperties.h  ParticleList.h  ParticleProperties.h  VParticleProperties.h
share/: CorsikaReaderConfig.cmake
share/examples/cpp/example_1/: CMakeLists.txt  README  main.cpp
share/examples/python/: check_ehistory.py  compare_high_low.py  ehistory_histograms.py  ehistory_histograms_raw.py  ground_distribution_1d.py  ground_distribution_1d_2.py  ground_distribution_2d.py  ground_distribution_2d_2.py  plot_example.py  raw_example.py  raw_example_2.py  read_example.py
sources/: cpp_example.txt  index.txt
src/corsika/: Block.cxx  CorsikaBlock.cxx  CorsikaLongFile.cxx  CorsikaParticle.cxx  CorsikaShower.cxx  CorsikaShowerFile.cxx  CorsikaShowerFileParticleIterator.cxx  FileIndex.cxx  FileStream.cxx  GaisserHillasParameter.cxx  Index.cxx  Logging.cxx  LongFile.cxx  Particle.cxx  RawCorsikaFile.cxx  RawParticleIterator.cxx  RawParticleStream.cxx  RawStream.cxx  Shower.cxx  ShowerFile.cxx  ShowerFileParticleIterator.cxx  ShowerParticleStream.cxx
src/corsika/particle/: NucleusProperties.cxx  ParticleList.cxx  ParticleProperties.cxx
src/pybindings/: Block_py.cxx  CMakeLists.txt  CorsikaBlock_py.cxx  CorsikaIOException_py.cxx  CorsikaLongFile_py.cxx  CorsikaLongProfile_py.cxx  CorsikaParticle_py.cxx  CorsikaShowerFileParticleIterator_py.cxx  CorsikaShowerFile_py.cxx  CorsikaShower_py.cxx  CorsikaUnits_py.cxx  GaisserHillasParameter_py.cxx  IOException_py.cxx  LongFile_py.cxx  LongProfile_py.cxx  MathConstants_py.cxx  ParticleList_py.cxx  ParticleProperties_py.cxx  Particle_py.cxx  PhysicalConstants_py.cxx  RawCorsikaFile_py.cxx  RawParticleIterator_py.cxx  RawStream_py.cxx  ShowerFileParticleIterator_py.cxx  ShowerFile_py.cxx  ShowerParticleList_py.cxx  Shower_py.cxx  Units_py.cxx  module.cxx
test/: corsika_test.h  main.cxx  testChain.cxx  testCorsikaChain.cxx  testCorsikaFile.cxx  testFile.cxx  testIndex.cxx  testRawCorsikaFile.cxx  testRawStream.cxx  test_corsika.cxx  test_file.cxx  test_index.cxx  test_low_high.cxx  test_rawstream.cxx  tests.cxx  tests.h
test/python/: ehistory.py  high_low.py  main 2.cxx  raw.py  read.py
